# Project-Chicago

./: CMakeLists.txt  add_quote.c  add_quote.h  delete_quote.c  delete_quote.h  display_quote.c  display_quote.h  edit_quote.c  edit_quote.h  main.c  quotes.txt  read_quotes.c  read_quotes.h  struct.h
